--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # URL
-NUXT_PUBLIC_FRONTEND_URL=http://admin.odoriko.localhost
-NUXT_PUBLIC_BACKEND_URL=http://admin.api.odoriko.localhost
+NUXT_PUBLIC_FRONTEND_URL=http://admin.odoriko-app.localhost
+NUXT_PUBLIC_BACKEND_URL=http://admin.api.odoriko-app.localhost
